LuccaUI/Input [FIX] Prevents messed up display caused by Bootstrap's bleeding classes

--- a/src/core/elements/_input.less
+++ b/src/core/elements/_input.less
@@ -245,8 +245,10 @@ textarea.lui.input {
 		display: block;
         box-sizing: border-box;
 		position: relative;
-        width: 100%;
-        height: 100%;
+        top: 0; bottom: 0; left: 0; right: 0;
+        padding: 0;
+        height: 100%; width: 100%;
+        min-height: 0; // Bootstrap override
 
 		.lui_icon_maker(checkbox, left); // Before is unchecked
 		.lui_icon_maker(check, right); // After is checked
